# tasks

./: .1password.env  .dockerignore  .eslintrc.json  .gitignore  Dockerfile.backend  Makefile  db.sh  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  prettier.config.cjs  stack.yml  tailwind.config.cjs  tsconfig.json  turbo.json
backend/: .dockerignore  Cargo.toml  Dockerfile  db.sh  deploy.js  dev.md  docker-compose.yml  docker_db.sh  env.example
backend/.sqlx/: query-0d8236dcc8bce3fb250d044e51863b3753058266843d92cdc0330df16ae2c62e.json  query-0f3dbbd7841c77dcbc689d654c502772542b0a4f3f743d9e638806a250db70aa.json  query-252322a86ef04b6fd100eff10fea838efeed1cd6fb6601fa8727a78bc973a36e.json  query-256b3f6c479123d81fa53c706c1b518c643179dd02d379baff4e4cc32b8f3bd9.json  query-278876d9be42476c24108fd49d621c011a233bd3c4faa73bd5c90686ea97cc1e.json  query-2a64a5042f5715be2cb8989bad997352aa63a48deefbf3e67077986a96a2f61e.json  query-2cfd43537f533485d5c3480d61b3bbc2f3393289a0978c1fdb6fae2ec35aebdf.json  query-3246e50430e29274144cadc93a44b0a01d551e8497a17d11acef4da766128ed6.json  query-34acba054631d16c1718db9128bfafcdfbdc5192a3df599f3fe025456075cf31.json  query-37fa27bfa017ecd40e8f030acee346414f6b60e84dc5b143bd700ed0adc41c69.json  query-3c21d6fbc4f707521f1a0bf6eace80245404f3fc9b6a1f22978372c38d9d9c29.json  query-44cfe247c0c682bd4fd98def587b1f32d83e9dd88545a9791bad88cd282b3382.json  query-4ec50ae097150105355a8561f82cbf5ca6dad2898b45946f24dbd9aeebc24e22.json  query-526d62639a85ecf17a4967c8c673abf55e6fe10fe5889e673fed7da7fb7b7c37.json  query-5bd39f5a12f482a441e84528edc177cc59e952be11cff5bfd016d69f4fdf75c2.json  query-5dc3843ce8fcef33a58bd01bd6bfb1f238e19a6fed167721be59b7af92e5f332.json  query-5e388e3e699265a36661c8a279900acd45bc3491c906b2ae8da200c7a8cf299c.json  query-63773cab5f38981e3d00e111d297cfe79528056f014fbd2718c7725834545c6c.json  query-698745ec60d4a03ffd8a2f7e686fe838f4a49260ecbcad24252d7d053f974ffb.json  query-6de03580d5d1068044d663e929ad37703bfd05577b445bc66ce7e609ffe5e90b.json  query-71b625f87df37a4ceba6558bcd0f65d12b7e01524332bfe2f86804fe314a927b.json  query-7c0e0aac705ef94733f24c534c24cb2469108504f1839fae76bd16626e28ea2d.json  query-84f34e19769c14cdfebd9eecffd5b494ca738e3c5c30f87587f1c66ced993c45.json  query-857fd460bdb71bf0882b58c115131cb314a25c40c9e3dd1514928bd54cc96f61.json  query-86a7326bf78c07baa9b93258b222df789852da64fb840bd6fd247d15330dcb12.json  query-91ead0e17ff5f992e5010fd53eb47a97da5b6fa98c42f8ba7b973aaaab9f9f54.json  query-92fed66a3091da8b5264c3bcf4db87dfe9302d1c8c9e2301b3358a2ce77da4f8.json  query-9bc49a79d0fe79345e2d8daf69b13ce2b8e6651d9e0dabf1ae92cbd996b579fa.json  query-9bd512136785efdde5c31c64140363e293b8b749017abeb19ab36086c49e7490.json  query-9c21139dd9405b1a346a3dce5428ac252c2e76aa9b6f9fe7441c29eeadaf01b4.json  query-9e0c3fb03f49bfaabbb7836e909ccfb4d3208ec2adfd9179de131572c58e8c0f.json  query-a419f2b1e7e730dda57443462f233751921710e66faaed4d1cb33a32ad46897b.json  query-a94d22941513b47ec71c19fd8dd8fcbc84ee44bca9bc8b285adfd7cb6d72c32e.json  query-abd30265aed614af6ce9325473392781c29fc9745d2788de1187a53e1a4cce24.json  query-ad8ceb99253868b6bafc4502a97288819bfd8310fca790db7eef1dd6f47dd38d.json  query-aeb3661fdd89465c337ce2e9f2d4bf0b5259b36180c990b2e5e08c36730536f1.json  query-b4da9fea41999a6da5161b4eb2ef7f8e0e6fbe9fc475d8543326c43d3b54571a.json  query-ce56228737a3492c6b7984bad1527f6a8fea8c4273127ac9b9582d5ec5139ee6.json  query-dea333b2fd54f3bb7aee8c43ef554a1bb4796de1d9e127087d762c8a09c3d65d.json  query-e1c28630f13f29bcffb66cdf2128d17f4a2dd5ecd7523e806e0c8935d084c766.json  (+6 more)
backend/api/: Cargo.toml
backend/api/src/: date.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
backend/api/src/auth/: mod.rs  session.rs  user_id.rs
backend/api/src/endpoints/: auth.rs  init.rs  mod.rs  notif_subs.rs  notifs.rs  stats.rs  sync.rs  tags.rs  tasks.rs  users.rs  ws.rs
backend/auth/: Cargo.toml
backend/auth/src/: cookie.rs  lib.rs  token.rs
backend/backend/: Cargo.toml
backend/backend/src/: main.rs
backend/common/: Cargo.toml
backend/common/src/: date.rs
backend/config/: Cargo.toml
backend/config/src/: lib.rs
backend/data/: Cargo.toml
backend/data/src/: lib.rs
backend/db/: Cargo.toml
backend/db/.sqlx/: query-0c6fa785fdfbb2c36f5d97aca2d2b99c6f46546cc81ad7ca7c5e784293720bb9.json  query-104c292ced995d7815a980f39e808e5a3605cf9fff2ef4a71e5b542a24eb06be.json  query-1ea1e875b6d556249cacbcca96c591785ecd85e53c3bd46b1606ffeeccc08a48.json  query-2679a80327e964986f4c723d215bbbecdfe0b1fa9b9f6a0e5f5ececdab244b81.json  query-6dd8c078c20b50551349243e6cc43f2d9d5e3447dcf9f3084e13e66ef60c932f.json  query-94a4caec0373d61d880ae45746a15c048ed6bfe90295768384e18e2548464b16.json  query-9bd512136785efdde5c31c64140363e293b8b749017abeb19ab36086c49e7490.json  query-e0bbdaffd7be7c6ee8d1393c4d2ee51f8ac401f9da1edca5d9d1c6bb87536dca.json  query-e1c28630f13f29bcffb66cdf2128d17f4a2dd5ecd7523e806e0c8935d084c766.json  query-e725798f29ed4f260d03fdf2c3e7b0a892887be557b15f0b279926e1af6d6f7e.json  query-e8439942689b572cd1f852d3141f4039bb8dd21746c69262418c4469d250b86e.json  query-fc3f1e385913bb7bd670a459accf5d67ea1ec14c6296f05a378ee6c190db8e3d.json  query-fe99ddb0f164492e368c1e0ca53e54e185723ac5cbd2e905f03be1193b782489.json
backend/db/migrations/: 20231122174909_init.down.sql  20231122174909_init.up.sql  20240208150703_notif_sub_endpoint_text.sql  20250412192856_tags__add_last_used_at.sql
backend/db/src/: lib.rs  notification_subs.rs  notifications.rs  sessions.rs  tags.rs  tasks.rs  users.rs
backend/entity/: Cargo.toml
backend/entity/src/: mod.rs  notif_subs.rs  notifs.rs  prelude.rs  tags.rs  tasks.rs  users.rs
backend/handlers/: Cargo.toml
backend/migrations/: 20231122174909_init.down.sql  20231122174909_init.up.sql
backend/notifications/: Cargo.toml
backend/notifications/src/: lib.rs  send.rs
backend/sql/: 01-create-tables.sql
backend/sql/postgres/: 01-create-tables.sql
backend/sql/postgresql/: 01-create-tables.sql
frontend/: .eslintrc.cjs  .prettierrc.json  Caddyfile  Dockerfile  bun.lockb  components.json  env.example  eslint-types.d.ts  index.html  (+11 more)
(+409 files in other folders)
