[workspace]
resolver = "2"
members = [
    "backend",
    "api",
    "config",
    "auth",
    "notifications",
    "db"
]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
once_cell = "1.17.1"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = [ "v4" ] }
thiserror = "1.0.38"
anyhow = { version = "1.0.69" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = { version = "0.8.4", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.6", features = [ "json" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
hex = "0.4.3"
sha2 = "0.10.8"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29" }
now = "0.1"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
incremental = false

