[workspace]
resolver = "2"
members = [
    "backend",
    "api",
    "config",
    "auth",
    "notifications",
    "db"
]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.203", features = [ "derive" ] }
serde_json = "1.0.118"
uuid = { version = "1.9.1", features = [ "v4" ] }
thiserror = "1.0.61"
anyhow = { version = "1.0.86" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = [ "json" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
hex = "0.4.3"
sha2 = "0.10.8"
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
now = "0.1"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
