[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
config = { path = "../config" }
auth = { path = "../auth" }
db = { path = "../db" }
common = { path = "../common" }
notifications = { path = "../notifications" }
axum = { version = "0.6.18", features = [ "headers", "ws" ] }
hyper = "0.14.25"
tower = "0.4.13"
tower-http = { version = "0.3", features = [ "trace", "cors" ] }
axum-prometheus = { version = "0.4.0" }