[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
now = { workspace = true }
once_cell = { workspace = true }
config = { path = "../config" }
auth = { path = "../auth" }
db = { path = "../db" }
notifications = { path = "../notifications" }
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = [ "typed-header" ] }
hyper = "1.3.1"
tower = "0.4.13"
tower-http = { version = "0.5", features = [ "trace", "cors" ] }
indexmap = { version = "2.1.0", features = ["serde"] }
