[package]
name = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
config = { path = "../config" }
jsonwebtoken = "8.3.0"
cookie = "0.18.0"
hmac = "0.12.1"
