[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }