[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
envy = "0.4.2"