[package]
name = "db"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
config = { path = "../config" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
ulid = "1"
