[package]
name = "db"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
config = { path = "../config" }
common = { path = "../common" }
ulid = "1"
