[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
config = { path = "../config" }
ulid = "1"
