[package]
name = "notifications"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
config = { path = "../config" }
db = { path = "../db" }
web-push =  { version = "0.10.0" }
futures = { version = "0.3.28" }