[package]
name = "notifications"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
config = { path = "../config" }
db = { path = "../db" }
web-push =  { version = "0.10.0" }